<resources>
    <string name="app_name">Material Theme</string>
    <string name="action_home">action_home</string>
    <string name="menu1">Snackbar Test</string>
    <string name="menu2">Tab Test</string>
    <string name="menu3">Bottom Bar</string>
    <string name="menu4">About Us</string>

    <string name="drawer_item_settings">تنظیمات</string>
    <string name="drawer_item_search">جستجو</string>
    <string name="drawer_item_home">خانه</string>


    <string name="edt_name">name</string>
    <string name="edt_mail">email</string>
    <string name="submit">Submit</string>

    <string name="refresh">refresh</string>

    <string name="email_error">Your email is not correct</string>
    <string name="name_error">You should enter your name</string>
    <string name="simple_snackbar_button">Say hello to my little friend</string>
    <string name="turn_off_internet">Turn off internet</string>
    <string name="show_warning">Show Warning</string>

    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="fourth_fragment">Fourth Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_home">Home!</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_search">Search</string>
    <string name="successfully_submitted">You submitted successfully!</string>
    <string name="hey_bud">Hello buddy!</string>
    <string name="internet_off">Internet in off</string>
    <string name="internet_on">Internet in on</string>
    <string name="ghostbusters">Watch out! there is a ghost behind you</string>

    <string name="about_us">
        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</string>
    <string name="address">جهان، ایران، کوچه 25، پلاک 2، واحد 10</string>
    <string name="email">mail@mail.com</string>
    <string name="tel">08454684561</string>
</resources>
