<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_menu_1"
        android:title="@string/menu1"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_menu_2"
        android:title="@string/menu2"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
    android:id="@+id/action_menu_3"
    android:title="@string/menu3"
    android:orderInCategory="100"
    app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_4"
        android:title="@string/menu4"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>